# imessage-tui

./: LICENSE  README.md  install.sh  pyproject.toml
src/imessage_tui/: __init__.py  app.py  app.tcss  bridge.py  outbox.py
